--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "moment": "^2.18.1",
     "react": "^0.14.6",
+    "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
