--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
