--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "moment": "^2.21.0",
     "react": "^0.14.6",
     "react-custom-scrollbars": "^4.2.1",
@@ -26,6 +27,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
