--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
