--- a/package.json
+++ b/package.json
@@ -6,34 +6,35 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "react-hot-loader": "^4.0.1",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4"
   },
   "dependencies": {
     "history": "^4.7.2",
     "md5": "^2.2.1",
     "moment": "^2.21.0",
     "papaparse": "^4.3.7",
-    "react": "^0.14.6",
+    "react": "^16.3.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^0.14.6",
+    "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "recharts": "^1.0.0-beta.10",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   }
