--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^4.0.1",
-    "webpack": "3.8.1",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "2.9.4"
   },
   "dependencies": {
